<resources>
	<string name="app_name">Events</string>
	<string name="events">Events</string>
	<string name="filter">Filter</string>
	<string name="title_activity_detail">DetailActivity</string>
	<string name="id_imageViewBackground">imageViewBackground</string>
	<string name="id_textViewName">textViewName</string>
	<string name="id_textViewCategory">textViewCategory</string>
	<string name="id_viewGradient">viewGradient</string>
</resources>
